[gd_scene load_steps=21 format=3 uid="uid://bjmmniaeam308"]

[ext_resource type="Script" path="res://Enemies/ZombieBasic/zombie_groans.gd" id="1_6dlug"]
[ext_resource type="PackedScene" uid="uid://dj8dsfwvk6oas" path="res://Libraries/CustomComponents/AudioRandomizer.tscn" id="2_wt7bi"]
[ext_resource type="AudioStream" uid="uid://bvwvk3g37xd42" path="res://Enemies/sounds/ESM_HCREA_cinematic_FX_voice_one_shot_creahmn_zombie_attack_deal_damage_aggressive_01_Fm.wav" id="3_l8y8q"]
[ext_resource type="AudioStream" uid="uid://kb5oct4n47i3" path="res://Enemies/sounds/ESM_HCREA_cinematic_FX_voice_one_shot_creahmn_zombie_attack_deal_damage_aggressive_03_Gm.wav" id="4_5pghm"]
[ext_resource type="AudioStream" uid="uid://c738fb45371mq" path="res://Enemies/sounds/ESM_HCREA_cinematic_FX_voice_one_shot_creahmn_zombie_attack_deal_damage_aggressive_04_A#.wav" id="5_ufm3g"]
[ext_resource type="AudioStream" uid="uid://dkibsvf5gj27l" path="res://Enemies/sounds/ESM_HCREA_cinematic_FX_voice_one_shot_creahmn_zombie_hurt_hit_damaged_03.wav" id="6_wrtr7"]
[ext_resource type="AudioStream" uid="uid://67pf48gsgfdi" path="res://Enemies/sounds/ESM_HCREA_cinematic_FX_voice_one_shot_creahmn_zombie_hurt_hit_damaged_07.wav" id="7_yu0lb"]
[ext_resource type="AudioStream" uid="uid://7o4akws6u472" path="res://Enemies/sounds/ESM_HCREA_cinematic_FX_voice_one_shot_creahmn_zombie_alerted_aggro_attention_02.wav" id="8_1cpfm"]
[ext_resource type="AudioStream" uid="uid://btom3svrw4qi0" path="res://Enemies/sounds/ESM_HCREA_cinematic_FX_voice_one_shot_creahmn_zombie_attack_deal_damage_aggressive_06_Cm.wav" id="9_gohcb"]
[ext_resource type="AudioStream" uid="uid://r12vcxadjmym" path="res://Enemies/sounds/ESM_HCREA_cinematic_FX_voice_one_shot_creahmn_zombie_attack_deal_damage_aggressive_07_F.wav" id="10_554g0"]
[ext_resource type="AudioStream" uid="uid://da1tviwccnmiq" path="res://Enemies/sounds/ESM_Horror_Game_Vocal_Creature_Normal_Zombie_Groan_Wet.wav" id="11_cxx5t"]
[ext_resource type="AudioStream" uid="uid://c1tj6m75c36qk" path="res://Enemies/sounds/ESM_Horror_Game_Vocal_Creature_Normal_Zombie_Groan_Wet_FX.wav" id="12_slpwu"]
[ext_resource type="AudioStream" uid="uid://dxi6874ejk6rm" path="res://Enemies/sounds/ZombieCreatureGroan_BW.1338.wav" id="13_jqt30"]
[ext_resource type="AudioStream" uid="uid://cieah6w601ae" path="res://Enemies/sounds/ZombieGroanPain_ZA02.609.wav" id="14_x62lf"]
[ext_resource type="AudioStream" uid="uid://dppo7i36qykia" path="res://Enemies/sounds/ZombieGroanPain_ZA02.610.wav" id="15_m202s"]
[ext_resource type="AudioStream" uid="uid://bg48o0ecrbqgc" path="res://Enemies/sounds/ESM_HCREA_cinematic_FX_voice_one_shot_creahmn_zombie_death_dying_05.wav" id="16_pqsmd"]
[ext_resource type="AudioStream" uid="uid://kwnlnqx4emxm" path="res://Enemies/sounds/ESM_Horror_Game_Vocal_Creature_Demon_Attack_Dry.wav" id="17_kstx2"]
[ext_resource type="AudioStream" uid="uid://ddqn25nrpwc3k" path="res://Enemies/sounds/ESM_Horror_Game_Vocal_Creature_Hulking_Zombie_Angry_Dry.wav" id="18_p4s6p"]
[ext_resource type="AudioStream" uid="uid://s0tqxm4tvm2l" path="res://Enemies/sounds/ESM_Horror_Game_Vocal_Creature_Bloated_Zombie_Burbling_Dry_Mutant_Dead_Undead_Monster_Fat.wav" id="19_mq3o2"]
[ext_resource type="AudioStream" uid="uid://djd3bv7t4pc3x" path="res://Enemies/sounds/ESM_Horror_Game_Vocal_Creature_Beast_Viscous_Attack_Wet.wav" id="20_nvbxl"]

[node name="ZombieGroans" type="Node2D"]
script = ExtResource("1_6dlug")

[node name="ShortGroans-AudioRandomizer" parent="." instance=ExtResource("2_wt7bi")]
volume_db = -8.0
max_polyphony = 4
bus = &"GameAudio"
audio_clips = Array[AudioStreamWAV]([ExtResource("3_l8y8q"), ExtResource("4_5pghm"), ExtResource("5_ufm3g"), ExtResource("6_wrtr7"), ExtResource("7_yu0lb")])

[node name="LongGroans-AudioRandomizer" parent="." instance=ExtResource("2_wt7bi")]
volume_db = -8.0
max_polyphony = 4
bus = &"GameAudio"
audio_clips = Array[AudioStreamWAV]([ExtResource("8_1cpfm"), ExtResource("9_gohcb"), ExtResource("10_554g0"), ExtResource("11_cxx5t"), ExtResource("12_slpwu"), ExtResource("13_jqt30"), ExtResource("14_x62lf"), ExtResource("15_m202s")])

[node name="DeathGroans-AudioRandomizer" parent="." instance=ExtResource("2_wt7bi")]
volume_db = -8.0
max_polyphony = 4
bus = &"GameAudio"
audio_clips = Array[AudioStreamWAV]([ExtResource("16_pqsmd")])

[node name="AttackGroans-AudioRandomizer" parent="." instance=ExtResource("2_wt7bi")]
volume_db = -8.0
max_polyphony = 4
bus = &"GameAudio"
audio_clips = Array[AudioStreamWAV]([ExtResource("17_kstx2"), ExtResource("18_p4s6p")])

[node name="SpitterGroans-AudioRandomizer" parent="." instance=ExtResource("2_wt7bi")]
volume_db = -8.0
max_polyphony = 4
bus = &"GameAudio"
audio_clips = Array[AudioStreamWAV]([ExtResource("19_mq3o2"), ExtResource("20_nvbxl")])
